# das2C

./: .gitignore  CMakeLists.txt  Darwin.mak  Doxyfile  Linux.mak  Makefile  README.md  ReleaseNotes.txt  SunOS.mak  SunOS_64.mak  Windows_gcc.mak  Windows_vc.mak  envsubst.py  install.bat  meson.build  setup.py  xmake.lua
.github/workflows/: main.yml
buildfiles/: Android.mak  CMakeLists.txt  Darwin.arm64.mak  Darwin.mak  DoxygenLayout.xml  Emscripten.mak  Linux.mak  SunOS.mak  Windows.mak  meson.build
buildfiles/conda/: README.md  bld.bat  build.sh  description.md  meta.yaml
buildfiles/conda_pthread4w/: 0001_change_install_dest.patch  bld.bat  meta.yaml
buildfiles/rpm/: das2C-destdir.patch  das2C.spec
buildfiles/subprojects/: fftw3.wrap
das2/: __init__.py  array.c  array.h  aryenc.c  aryenc.h  buffer.c  buffer.h  builder.c  builder.h  cli.c  cli.h  codec.c  codec.h  codex.c  codex.h  core.h  credentials.c  credentials.h  d1_daspkt.c  d1_parsetime.c  d1_ttime.c  das.h  das1.c  das1.h  das2io.c  das2io.h  daspkt.d  dasrdr.d  dastime.py  data.c  data.h  dataset.c  dataset.h  dataset_hdr2.c  dataset_hdr3.c  datum.c  datum.h  defs.h  descriptor.c  descriptor.h  (+78 more)
doc/: array_8h.html  buffer_8h_source.html  classDasEncoding.html  functions.html  functions_vars.html  globals_e.html  globals_enum.html  globals_l.html  globals_s.html  globals_type.html  globals_y.html  group__datasets.html  group__streams.html  group__time.html  group__units.html  group__values.html  install_fedora.txt  install_mac.txt  install_neon.txt  install_visual_studio.txt  oob_8h.html  operator_8h_source.html  pages.html  processor_8h.html  processor_8h_source.html  structdas__descriptor.html  structdas__json__parse__result__s.html  structdas__psd__t.html  structdasds__iterator__t.html  structdatum__t.html  structpacket__descriptor.html  structplane__descriptor.html  time_8h_source.html  util_8h.html  variable_8h.html
doc/search/: all_1.js  all_13.js  all_14.js  all_3.js  classes_3.js  defines_2.js  files_5.js  files_6.js  files_8.js  functions_0.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_c.js  functions_e.js  functions_f.js  groups_1.js  groups_3.js  groups_5.js  typedefs_0.js  variables_0.js  variables_10.js  variables_c.js
docs/: annotated.html  array_8h.html  array_8h_source.html  buffer_8h.html  buffer_8h_source.html  classBuilder.html  core_8h.html  core_8h_source.html  credentials_8h.html  credentials_8h_source.html  das1_8h.html  das1_8h_source.html  das_8h.html  das_8h_source.html  dataset_8h.html  dataset_8h_source.html  datum_8h.html  datum_8h_source.html  defs_8h_source.html  descriptor_8h.html  descriptor_8h_source.html  dft_8h.html  dft_8h_source.html  dimension_8h_source.html  dir_abe7acac7957bd0645638cc092cd555a.html  dsdf_8h.html  dsdf_8h_source.html  encoding_8h.html  encoding_8h_source.html  files.html  functions.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  (+132 more)
docs/search/: all_10.js  all_12.js  all_15.js  all_9.js  all_d.js  classes_1.js  classes_4.js  enums_0.js  enumvalues_0.js  files_1.js  files_3.js  files_d.js  functions_10.js  groups_0.js  search.js  searchdata.js  typedefs_1.js  typedefs_3.js  typedefs_4.js  variables_1.js  variables_3.js  variables_4.js  variables_8.js  variables_e.js
html/: array_8h_source.html  classes.html  das1_8h.html  das1_8h_source.html  dataset_8h.html  dataset_8h_source.html  datum_8h_source.html  defs_8h.html  descriptor_8h.html  dft_8h_source.html  dir_abe7acac7957bd0645638cc092cd555a.html  dsdf_8h_source.html  encoding_8h.html  encoding_8h_source.html  files.html  functions_func.html  globals_defs.html  globals_eval.html  globals_f.html  globals_func.html  globals_g.html  globals_i.html  globals_j.html  globals_m.html  globals_o.html  globals_p.html  globals_r.html  globals_t.html  globals_u.html  globals_v.html  globals_vars.html  group__DFT.html  group__network.html  group__utilities.html  http_8h.html  http_8h_source.html  interfaceStreamHandler.html  io_8h.html  io_8h_source.html  log_8h.html  (+39 more)
html/search/: all_0.js  all_11.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  (+42 more)
makefiles/: Android.mak  Darwin.mak  Linux.mak  SunOS.mak  Windows.mak
nbproject/: configurations.xml  project.xml
notes/: ReleaseNotes.txt  das3_roadmap.md  das_containers.odg  install.txt  install_visual_studio.txt  notimp_inventory.md
schema/: das-basic-doc-ns-v3.0.xsd  das-basic-stream-ns-v3.0.xsd  das-basic-stream-v2.2.xsd  das-basic-stream-v3.0.xsd
subprojects/: fftw3.wrap
test/: FakeLeapSeconds.txt  LoadStream.c  Survey.dsdf  TestArray.c  TestAuth.c  TestBuilder.c  TestCatalog.c  TestCredMngr.c  TestDataset.c  TestEls.c  TestFilter.c  TestIter.c  TestProp.c  TestRaggedEncode.c  TestSpice.c  TestTT2000.c  TestUnits.c  TestUri.c  TestV3Read.c  TestValue.c  TestVariable.c  cassini_rpws_wfrm_sample.d2s  cdf_dump.py  das1_fxtime_output.txt  das1_fxtime_test.sh  das2_ascii_input1.d2s  das2_ascii_input2.d2s  das2_ascii_output1.d2t  das2_ascii_output2.d2t  das2_ascii_test1.sh  das2_ascii_test2.sh  das2_bin_avgsec_input1.d2s  das2_bin_avgsec_input2.d2s  das2_bin_avgsec_output1.d2t  das2_bin_avgsec_output2.d2t  das2_bin_avgsec_test1.sh  das2_bin_avgsec_test2.sh  das2_bin_peakavgsec_input1.d2s  das2_bin_peakavgsec_output1.d2t  das2_bin_peakavgsec_test1.sh  (+99 more)
utilities/: das1_ascii.c  das1_bin_avg.c  das1_fxtime.c  das1_inctime.c  das1_paf.c  das1_pto.c  das2_ascii.c  das2_bin_avg.c  das2_bin_avgsec.c  das2_bin_peakavgsec.c  das2_bin_ratesec.c  das2_binary.c  das2_cache_rdr.c  das2_csv.c  das2_deflate.c  das2_from_das1.c  das2_from_tagged_das1.c  das2_hapi.c  das2_histo.c  das2_inflate.c  das2_node.c  das2_prtime.c  das2_psd.c  das2_psd.h  das2_rate.c  das2_table.c  das3_cdf.c  das3_csv.c  das3_from_cdf.c  das3_node.c  das3_rotate.c  das3_spice.c  das3_test.c  das3_text.c  das3_vec.c  das_node.c  psd_xcenter.c  psd_xcenter.h  psd_xoffset.c  psd_xoffset.h  (+4 more)
(+7 files in other folders)
